--- a/web/rangeSensor.html
+++ b/web/rangeSensor.html
@@ -2,7 +2,7 @@
     <tr valign="bottom">
         <td>{{component.configuration.min}}</td>
         <td><input
-                ti-knob="{width: 100, fgColor: '#5E829A', bgColor: '#E7E6E6', angleOffset: -135, angleArc: 270, font: '\'Titillium Web\', sans-serif'}"
+                ti-knob="{width: 100, fgColor: '#2f6ab4', bgColor: '#E6E6E6', angleOffset: -135, angleArc: 270, font: '\'Titillium Web\', sans-serif'}"
                 ti-model="component._value" ti-min="component.configuration.min"
                 ti-max="component.configuration.max" ti-change="panel.pushSensorValue(component)"
                 data-height="100"></td>
