--- a/web/servo.html
+++ b/web/servo.html
@@ -1,6 +1,6 @@
 <table>
 	<tr>
-		<td><input ti-knob="{width: 80, fgColor: '#79654C', bgColor: '#E5D9CA', angleOffset: component.configuration.minimum, angleArc: component.configuration.maximum - component.configuration.minimum, font: '\'Titillium Web\', sans-serif'}"
+		<td><input ti-knob="{width: 80, fgColor: '#2f6ab4', bgColor: '#E5D9CA', angleOffset: component.configuration.minimum, angleArc: component.configuration.maximum - component.configuration.minimum, font: '\'Titillium Web\', sans-serif'}"
 			style="height: 120px;" ti-model="component._state.position"
 			min="{{component.configuration.minimum}}"
 			max="{{component.configuration.maximum}}" data-height="100"
