--- a/web/tvRemote.html
+++ b/web/tvRemote.html
@@ -54,15 +54,15 @@
         <td>
             <table style="margin-left: 20px;">
                 <tr>
-                    <td align="center">
+                    <td style="text-align: center">
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'channelUp')">+</div>
                     </td>
                 </tr>
                 <tr>
-                    <td align="center">VOL</td>
+                    <td style="text-align: center">VOL</td>
                 </tr>
                 <tr>
-                    <td align="center">
+                    <td style="text-align: center">
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'channelDown')">-</div>
 
                     </td>
@@ -72,7 +72,7 @@
         <td>
             <table style="margin-left: 10px;">
                 <tr>
-                    <td align="center">
+                    <td style="text-align: center">
 
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'volumeUp')"><i
                                 class="fa fa-chevron-up"></i></div>
@@ -80,10 +80,10 @@
                     </td>
                 </tr>
                 <tr>
-                    <td align="center">CH</td>
+                    <td style="text-align: center">CH</td>
                 </tr>
                 <tr>
-                    <td align="center">
+                    <td style="text-align: center">
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'volumeDown')"><i
                                 class="fa fa-chevron-down"></i></div>
 
