--- a/web/emotivaRm100.html
+++ b/web/emotivaRm100.html
@@ -1,49 +1,115 @@
-<table class="formTable">
-    <tr valign="top">
-        <td>
-            <div class="circleButton" ng-click="panel.callDeviceService(component, 'power')"><i
-                    class="fa fa-power-off"></i></div>
-        </td>
-        <td>
-            <table class="buttonGrid" style="margin-left: 20px;">
-                <tr>
-                    <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'hdmi1')">1</div>
+<div class="section" style="padding-top: 0; padding-bottom: 0;">
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <table style="width: 100%;">
+                <tr valign="top">
+                    <td style="width: 50%; text-align: center;">
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'standby')"><i
+                                class="fa fa-power-off"></i></div>
                     </td>
-                    <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'hdmi2')">2</div>
-                    </td>
-                    <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'hdmi3')">3</div>
-                    </td>
-                    <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'hdmi4')">3</div>
+                    <td style="width: 50%; text-align: center;">
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'on')"><i
+                                class="fa fa-power-off"></i></div>
                     </td>
                 </tr>
             </table>
-        </td>
-        <td>
-            <table style="margin-left: 10px;">
+        </div>
+    </div>
+</div>
+<div class="section" style="padding-top: 0; padding-bottom: 0;">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4 class="panel-title">
+                Mode
+            </h4>
+        </div>
+        <div class="panel-body">
+            <table>
                 <tr>
-                    <td style="text-align: center">
-
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'volumeUp')"><i
-                                class="fa fa-chevron-up"></i></div>
-
-                    </td>
-                </tr>
-                <tr>
-                    <td style="text-align: center">CH</td>
-                </tr>
-                <tr>
-                    <td style="text-align: center">
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'volumeDown')"><i
-                                class="fa fa-chevron-down"></i></div>
-
+                    <td>
+                        <table class="buttonGrid" style="margin-left: 20px;">
+                            <tr>
+                                <td>
+                                    <div class="circleButton" ng-click="panel.callDeviceService(component, 'hdmi1')">1
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="circleButton" ng-click="panel.callDeviceService(component, 'hdmi2')">2
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="circleButton" ng-click="panel.callDeviceService(component, 'hdmi3')">3
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="circleButton" ng-click="panel.callDeviceService(component, 'hdmi4')">3
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
                     </td>
                 </tr>
             </table>
-        </td>
-    </tr>
-</table>
+        </div>
+    </div>
+</div>
+<div class="section" style="padding-top: 0; padding-bottom: 0;">
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <table style="width: 100%;">
+                <tr>
+                    <td style="text-align: center">
+                        <table style="margin-left: 10px;">
+                            <tr>
+                                <td style="text-align: center">
+
+                                    <div class="circleButton"
+                                         ng-click="panel.callDeviceService(component, 'channelUp')">
+                                        <i
+                                                class="fa fa-chevron-up"></i></div>
+
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="text-align: center">CH</td>
+                            </tr>
+                            <tr>
+                                <td style="text-align: center">
+                                    <div class="circleButton"
+                                         ng-click="panel.callDeviceService(component, 'channelDown')"><i
+                                            class="fa fa-chevron-down"></i></div>
+
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                    <td style="text-align: center">
+                        <table style="margin-left: 10px;">
+                            <tr>
+                                <td style="text-align: center">
+
+                                    <div class="circleButton" ng-click="panel.callDeviceService(component, 'volumeUp')">
+                                        <i
+                                                class="fa fa-chevron-up"></i></div>
+
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="text-align: center">VOL</td>
+                            </tr>
+                            <tr>
+                                <td style="text-align: center">
+                                    <div class="circleButton"
+                                         ng-click="panel.callDeviceService(component, 'volumeDown')"><i
+                                            class="fa fa-chevron-down"></i></div>
+
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</div>
 
