--- a/web/yamahaHTR6130.html
+++ b/web/yamahaHTR6130.html
@@ -33,7 +33,7 @@
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'DVD')">DVD</div>
                     </td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'DTVCBL')">DTV/CBL</div>
+                        <div class="buttonIcon" ng-click="panel.callDeviceService(component, 'DTVCBL')">DTV/CBL</div>
                     </td>
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'DVR')">DVR</div>
@@ -41,22 +41,13 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'VAUXDOCK')">V-AUX/DOCK</div>
+                        <div class="circleText" ng-click="panel.callDeviceService(component, 'VAUXDOCK')">V-AUX/DOCK</div>
                     </td>
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'D')">D</div>
                     </td>
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'E')">E</div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                    </td>
-                    <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'channel0')">0</div>
-                    </td>
-                    <td>
                     </td>
                 </tr>
             </table>
@@ -85,30 +76,28 @@
                 </tr>
             </table>
         </td>
-        <!--
         <td>
             <table style="margin-left: 10px;">
                 <tr>
                     <td style="text-align: center">
 
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'volumeUp')"><i
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'PROGLEFT')"><i
                                 class="fa fa-chevron-up"></i></div>
 
                     </td>
                 </tr>
                 <tr>
-                    <td style="text-align: center">CH</td>
+                    <td style="text-align: center">PROG</td>
                 </tr>
                 <tr>
                     <td style="text-align: center">
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'volumeDown')"><i
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'PROGRIGHT')"><i
                                 class="fa fa-chevron-down"></i></div>
 
                     </td>
                 </tr>
             </table>
         </td>
-        -->
     </tr>
 </table>
 
