--- a/web/yamahaHTR6130.html
+++ b/web/yamahaHTR6130.html
@@ -1,22 +1,34 @@
 <table class="formTable">
     <tr valign="top">
         <td>
-            <table style="margin-left: 20px;">
+            <table class="buttonGrid" style="margin-left: 20px;">
                 <tr>
-                    <td style="text-align: center">
+                    <td>
+                    </td>
+                    <td>
+                    </td>
+                    <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'STANDBY')"><i
                                 class="fa fa-power-off"></i></div>
                     </td>
-                </tr>
-                <tr>
-                    <td style="text-align: center">
+                    <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'POWER')">|</div>
                     </td>
                 </tr>
-            </table>
-        </td>
-        <td>
-            <table class="buttonGrid" style="margin-left: 20px;">
+                <tr>
+                    <td>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'A')">A</div>
+                    </td>
+                    <td>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'B')">B</div>
+                    </td>
+                    <td>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'C')">B</div>
+                    </td>
+                    <td>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'MUTE')">MUTE</div>
+                    </td>
+                </tr>
                 <tr>
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'CD')">CD</div>
@@ -26,6 +38,8 @@
                     </td>
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'TUNER')">TUNER</div>
+                    </td>
+                    <td>
                     </td>
                 </tr>
                 <tr>
@@ -38,6 +52,10 @@
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'DVR')">DVR</div>
                     </td>
+                    <td>
+                    </td>
+                    <td>
+                    </td>
                 </tr>
                 <tr>
                     <td>
@@ -48,6 +66,83 @@
                     </td>
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'E')">E</div>
+                    </td>
+                    <td>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                    </td>
+                    <td>
+                    </td>
+                    <td>
+                    </td>
+                    <td>
+                    </td>
+                </tr>
+                <tr><td colspan="4" style="text-align: center;">SCENE</td></tr>
+                <tr>
+                    <td>
+                        <div class="circleText" ng-click="panel.callDeviceService(component, 'SCENE1')">1</div>
+                    </td>
+                    <td>
+                        <div class="circleText" ng-click="panel.callDeviceService(component, 'SCENE2')">2</div>
+                    </td>
+                    <td>
+                        <div class="circleText" ng-click="panel.callDeviceService(component, 'SCENE3')">3</div>
+                    </td>
+                    <td>
+                        <div class="circleText" ng-click="panel.callDeviceService(component, 'SCENE4')">4</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                    </td>
+                    <td>
+                    </td>
+                    <td>
+                    </td>
+                    <td>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="circleText" ng-click="panel.callDeviceService(component, 'TITLE')">TITLE</div>
+                    </td>
+                    <td>
+                        <div class="circleText" ng-click="panel.callDeviceService(component, 'PRESETCHUP')"><i
+                                class="fa fa-chevron-up"></i></div>
+                    </td>
+                    <td>
+                        <div class="circleText" ng-click="panel.callDeviceService(component, 'MENU')">MENU</div>
+                    </td>
+                    <td>
+                        <div rowspan="2" class="circleText" ng-click="panel.callDeviceService(component, 'VOLUMEUP')"><i
+                                class="fa fa-volume-up"></i></div>
+                    </td>
+                <tr>
+                    <td>
+                        <div class="circleText" ng-click="panel.callDeviceService(component, 'ABCDELEFT')"><i
+                                class="fa fa-chevron-left"></i></div>
+                    </td>
+                    <td>
+                        <div class="circleText" ng-click="panel.callDeviceService(component, 'ENTER')">ENTER</div>
+                    </td>
+                    <td>
+                        <div class="circleText" ng-click="panel.callDeviceService(component, 'ABCDERIGHT')"><i
+                                class="fa fa-chevron-right"></i></div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="circleText" ng-click="panel.callDeviceService(component, 'RETURN')">RETURN</i></div>
+                    </td>
+                    <td>
+                        <div class="circleText" ng-click="panel.callDeviceService(component, 'PRESETCHUP')"><i
+                                class="fa fa-chevron-down"></i></div>
+                    </td>
+                    <td>
+                        <div class="circleText" ng-click="panel.callDeviceService(component, 'DISPLAY')">DISPLAY</div>
                     </td>
                 </tr>
             </table>
