more Yamaha HTR-6130 remote buttons

--- a/web/yamahaHTR6130.html
+++ b/web/yamahaHTR6130.html
@@ -3,10 +3,8 @@
         <td>
             <table class="buttonGrid" style="margin-left: 20px;">
                 <tr>
-                    <td>
-                    </td>
-                    <td>
-                    </td>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'STANDBY')"><i
                                 class="fa fa-power-off"></i></div>
@@ -39,8 +37,7 @@
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'TUNER')">TUNER</div>
                     </td>
-                    <td>
-                    </td>
+                    <td>&nbsp;</td>
                 </tr>
                 <tr>
                     <td>
@@ -52,10 +49,7 @@
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'DVR')">DVR</div>
                     </td>
-                    <td>
-                    </td>
-                    <td>
-                    </td>
+                    <td>&nbsp;</td>
                 </tr>
                 <tr>
                     <td>
@@ -67,18 +61,13 @@
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'E')">E</div>
                     </td>
-                    <td>
-                    </td>
+                    <td>&nbsp;</td>
                 </tr>
                 <tr>
-                    <td>
-                    </td>
-                    <td>
-                    </td>
-                    <td>
-                    </td>
-                    <td>
-                    </td>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
                 </tr>
                 <tr><td colspan="4" style="text-align: center;">SCENE</td></tr>
                 <tr>
@@ -96,14 +85,10 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>
-                    </td>
-                    <td>
-                    </td>
-                    <td>
-                    </td>
-                    <td>
-                    </td>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
                 </tr>
                 <tr>
                     <td>
@@ -136,7 +121,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'RETURN')">RETURN</i></div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'RETURN')">RETURN</div>
                     </td>
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'PRESETCHUP')"><i
@@ -146,8 +131,52 @@
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'DISPLAY')">DISPLAY</div>
                     </td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'VOLUMEUP')"><i
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'VOLUMEDOWN')"><i
                                 class="fa fa-volume-down"></i></div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'PROGLEFT')"><i
+                                class="fa fa-angle-left"></i></div>
+                    </td>
+                    <td>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'PROGRIGHT')"><i
+                                class="fa fa-angle-right"></i></div>
+                    </td>
+                    <td>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'ENHANCER')">ENHANCER</div>
+                    </td>
+                    <td>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'SURDECODE')">SUR. DECODE</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'STRAIGHT')">STRAIGHT</div>
+                    </td>
+                    <td>&nbsp;</td>
+                    <td>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'NIGHT')">NIGHT</div>
+                    </td>
+                    <td>&nbsp;</td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'MULTICHIN')">MULTI CH IN</div>
+                    </td>
+                    <td>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'AUDIOSEL')">AUDIO SEL</div>
+                    </td>
+                    <td>&nbsp;</td>
+                    <td>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'SLEEP')">SLEEP</div>
                     </td>
                 </tr>
             </table>
