more Yamaha HTR-6130 remote buttons

--- a/web/yamahaHTR6130.html
+++ b/web/yamahaHTR6130.html
@@ -21,7 +21,7 @@
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'B')">B</div>
                     </td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'C')">B</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'C')">C</div>
                     </td>
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'MUTE')">MUTE</div>
