yamaha HTR 6130 web UI enhancements

--- a/web/yamahaHTR6130.html
+++ b/web/yamahaHTR6130.html
@@ -10,56 +10,70 @@
                                 class="fa fa-power-off"></i></div>
                     </td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'POWER')">|</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'POWER')"
+                             style="font-size: 12px;font-weight: bold">|</div>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'A')">A</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'A')"
+                             style="font-size: 8px">A</div>
                     </td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'B')">B</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'B')"
+                             style="font-size: 8px">B</div>
                     </td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'C')">C</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'C')"
+                             style="font-size: 8px">C</div>
                     </td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'MUTE')">MUTE</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'MUTE')"
+                                style="font-size: 8px">MUTE</div>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'CD')">CD</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'CD')"
+                             style="font-size: 8px">CD</div>
                     </td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'MDCDR')">MD/CD-R</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'MDCDR')"
+                             style="font-size: 8px">MD/CD-R</div>
                     </td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'TUNER')">TUNER</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'TUNER')"
+                             style="font-size: 8px">TUNER</div>
                     </td>
                     <td>&nbsp;</td>
                 </tr>
                 <tr>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'DVD')">DVD</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'DVD')"
+                             style="font-size: 8px">DVD</div>
                     </td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'DTVCBL')">DTV/CBL</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'DTVCBL')"
+                             style="font-size: 8px">DTV/CBL</div>
                     </td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'DVR')">DVR</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'DVR')"
+                             style="font-size: 8px">DVR</div>
                     </td>
                     <td>&nbsp;</td>
                 </tr>
                 <tr>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'VAUXDOCK')">V-AUX/DOCK</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'VAUXDOCK')"
+                             style="font-size: 8px">V-AUX/DOCK</div>
                     </td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'D')">D</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'D')"
+                             style="font-size: 8px">D</div>
                     </td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'E')">E</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'E')"
+                             style="font-size: 8px">E</div>
                     </td>
                     <td>&nbsp;</td>
                 </tr>
@@ -72,16 +86,20 @@
                 <tr><td colspan="4" style="text-align: center;">SCENE</td></tr>
                 <tr>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'SCENE1')">1</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'SCENE1')"
+                             style="font-size: 8px">1</div>
                     </td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'SCENE2')">2</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'SCENE2')"
+                             style="font-size: 8px">2</div>
                     </td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'SCENE3')">3</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'SCENE3')"
+                             style="font-size: 8px">3</div>
                     </td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'SCENE4')">4</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'SCENE4')"
+                             style="font-size: 8px">4</div>
                     </td>
                 </tr>
                 <tr>
@@ -92,14 +110,16 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'TITLE')">TITLE</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'TITLE')"
+                             style="font-size: 8px">TITLE</div>
                     </td>
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'PRESETCHUP')"><i
                                 class="fa fa-chevron-up"></i></div>
                     </td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'MENU')">MENU</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'MENU')"
+                             style="font-size: 8px">MENU</div>
                     </td>
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'VOLUMEUP')"><i
@@ -111,7 +131,8 @@
                                 class="fa fa-chevron-left"></i></div>
                     </td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'ENTER')">ENTER</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'ENTER')"
+                             style="font-size: 8px">ENTER</div>
                     </td>
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'ABCDERIGHT')"><i
@@ -121,14 +142,16 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'RETURN')">RETURN</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'RETURN')"
+                             style="font-size: 8px">RETURN</div>
                     </td>
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'PRESETCHUP')"><i
                                 class="fa fa-chevron-down"></i></div>
                     </td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'DISPLAY')">DISPLAY</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'DISPLAY')"
+                             style="font-size: 8px">DISPLAY</div>
                     </td>
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'VOLUMEDOWN')"><i
@@ -151,32 +174,39 @@
                                 class="fa fa-angle-right"></i></div>
                     </td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'ENHANCER')">ENHANCER</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'ENHANCER')"
+                             style="font-size: 8px">ENHANCER</div>
                     </td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'SURDECODE')">SUR. DECODE</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'SURDECODE')"
+                             style="font-size: 8px">SUR. DECODE</div>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'STRAIGHT')">STRAIGHT</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'STRAIGHT')"
+                             style="font-size: 8px">STRAIGHT</div>
                     </td>
                     <td>&nbsp;</td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'NIGHT')">NIGHT</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'NIGHT')"
+                             style="font-size: 8px">NIGHT</div>
                     </td>
                     <td>&nbsp;</td>
                 </tr>
                 <tr>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'MULTICHIN')">MULTI CH IN</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'MULTICHIN')"
+                             style="font-size: 8px">MULTI CH IN</div>
                     </td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'AUDIOSEL')">AUDIO SEL</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'AUDIOSEL')"
+                             style="font-size: 8px">AUDIO SEL</div>
                     </td>
                     <td>&nbsp;</td>
                     <td>
-                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'SLEEP')">SLEEP</div>
+                        <div class="circleButton" ng-click="panel.callDeviceService(component, 'SLEEP')"
+                             style="font-size: 8px">SLEEP</div>
                     </td>
                 </tr>
             </table>
