Yamaha HTR 6130 web UI enhancements

--- a/web/yamahaHTR6130.html
+++ b/web/yamahaHTR6130.html
@@ -39,7 +39,7 @@
                     </td>
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'MDCDR')"
-                             style="font-size: 8px">MD/CD-R</div>
+                             style="font-size: 8px">MD/CDR</div>
                     </td>
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'TUNER')"
@@ -65,7 +65,7 @@
                 <tr>
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'VAUXDOCK')"
-                             style="font-size: 8px">V-AUX/DOCK</div>
+                             style="font-size: 8px">V-AUX</div>
                     </td>
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'D')"
@@ -175,17 +175,17 @@
                     </td>
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'ENHANCER')"
-                             style="font-size: 8px">ENHANCER</div>
+                             style="font-size: 8px">ENHAN.</div>
                     </td>
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'SURDECODE')"
-                             style="font-size: 8px">SUR. DECODE</div>
+                             style="font-size: 8px">SUR.</div>
                     </td>
                 </tr>
                 <tr>
                     <td>
                         <div class="circleButton" ng-click="panel.callDeviceService(component, 'STRAIGHT')"
-                             style="font-size: 8px">STRAIGHT</div>
+                             style="font-size: 8px">STRGHT</div>
                     </td>
                     <td>&nbsp;</td>
                     <td>
